[package]
name = "generic-core"
version = "0.0.2"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyn/generic"
homepage = "https://github.com/colbyn/generic"
description = "[Internal] higher level serialization of rust values to rust values"
keywords = []

[dependencies]
uuid = "^0.7"
