[package]
name = "generic-derive"
version = "0.0.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyn/generic"
homepage = "https://github.com/colbyn/generic"
description = "[Internal] higher level serialization of rust values to rust values"
keywords = []

[lib]
proc-macro = true
# crate-type = ["proc-macro"]

[dependencies]
generic-core = {path = "../core", version = "0.0.1"}
quote = "^1.0"
syn = "^1.0"
proc-macro2 = "^1.0"
rand = "0.7.2"