[package]
name = "generic"
version = "0.0.2"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyn/generic"
homepage = "https://github.com/colbyn/generic"
description = "Higher level serialization of rust values to rust values"
keywords = ["serialization", "derive", "tree", "data-structures", "data"]
readme = "../README.md"

[dependencies]
generic-core = {path = "../core", version = "0.0.2"}
generic-derive = {path = "../derive", version = "0.0.2"}
